<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".DatosMascota">


    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/nombre_de_mascota"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/llDatos"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llMascota"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/datos_mascota"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/afiliacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afiliacion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/especie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/especie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/raza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raza"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pelo"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llDuenio"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/duenio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/datos_due_o"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/cedula"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nombreDuenio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/nombre"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/direccion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/telefono"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFotos"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBotones"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imgMascota"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llDatos"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/foto_due_o"
        tools:srcCompat="@tools:sample/avatars[1]" />

    <ImageView
        android:id="@+id/imgDuenio"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_below="@+id/llDatos"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imgMascota"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/foto_mascota"
        tools:srcCompat="@tools:sample/avatars[2]" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotones"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistroVacuna"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="btnRegistroVacuna"
            android:text="@string/registro_de_vacuna" />

        <Button
            android:id="@+id/btnHistoriaClinica"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="btnHistoriaClinica"
            android:text="@string/historia_clinica" />
    </LinearLayout>

</RelativeLayout>