<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroVacunas">

    <LinearLayout
        android:id="@+id/llCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
        android:id="@+id/tvVacuna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:labelFor="@id/etVacuna"
        android:text="@string/vacuna"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etVacuna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        android:labelFor="@id/tvVacuna"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvDosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:labelFor="@id/etDosis"
        android:text="@string/dosis"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etDosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="number"
        android:labelFor="@id/tvDosis"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotones"
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrarVacuna"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:onClick="btnRegistrarVacuna"
            android:text="@string/registrarVacuna" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Registro de Vacuna"
        android:textSize="30sp" />
</RelativeLayout>